# asynclog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: main.workflow
docker/: Dockerfile  Makefile
src/lib/: asynclog.cpp  asynclog.h  atomic.cpp  atomic.h  collector.cpp  log.cpp  log.h  ringbuffer.cpp  ringbuffer.h  stream.cpp  stream.h  stringformat.cpp  stringformat.h
src/test/: main.cpp
